--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.13.1",
     "node-fetch": "^1.5.3",
     "query-string": "^4.1.0",
+    "urllib-sync": "^1.1.3",
     "xml2js": "^0.4.16"
   },
   "description": "NodeJS implement of CAS(Central Authentication Service) client.",
@@ -40,5 +41,5 @@
   "scripts": {
     "start": "node ./example"
   },
-  "version": "1.1.16-beta"
+  "version": "1.1.17-beta"
 }
