--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "lodash": "^4.13.1",
-    "node-fetch": "^1.5.3",
     "query-string": "^4.1.0",
     "urllib-sync": "^1.1.3",
     "xml2js": "^0.4.16"
@@ -15,10 +14,13 @@
   "description": "NodeJS implement of CAS(Central Authentication Service) client.",
   "devDependencies": {
     "body-parser": "^1.15.1",
+    "chai": "^3.5.0",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "istanbul": "^0.4.4",
+    "mocha": "^2.5.3",
     "session-memory-store": "^0.2.1"
   },
   "directories": {
