--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chai": "^3.5.0",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.4.2",
+    "es6-promise": "^3.2.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "istanbul": "^0.4.4",
