add coveralls config

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.15.1",
     "chai": "^3.5.0",
     "cookie-parser": "^1.4.3",
+    "coveralls": "^2.11.12",
     "ejs": "^2.4.2",
     "es6-promise": "^3.2.1",
     "express": "^4.13.4",
@@ -22,6 +23,7 @@
     "istanbul": "^0.4.4",
     "lodash": "^4.13.1",
     "mocha": "^2.5.3",
+    "mocha-lcov-reporter": "^1.2.0",
     "rewire": "^2.5.2",
     "session-memory-store": "^0.2.2",
     "uuid": "^2.0.2"
