--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "deprecate": "^0.1.0",
+    "js-yaml": "^3.11.0",
     "lodash": "^4.13.1",
     "query-string": "^4.1.0",
     "xml2js": "^0.4.16"
